# service

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: container-image.yml
app/: globals.css  layout.tsx  page.tsx
app/api/chat/: route.ts
argocd/: app.yaml
k8s/: deployment.yaml  namespace.yaml  route.yaml  service.yaml
status_service/: .gitignore  README.md  __init__.py  __main__.py  config.py  main.py  schemas.py  server.py
tests/: __init__.py  test_status_endpoint.py
